# greenpea

./: .gitignore  AUTHORS  COPYING  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  configure.ac  configure.in  groups  pdp12-emu.spec.in  project.config
frontend/: Makefile.am  Makefile.in
frontend/console/: Makefile.am  Makefile.in  paperdump.c  parser.c  parser.h  pdp12c.c  pdp12c.h  readln.c  readln.h  shell.c  shell.h  teletype.c  teletype.h
libdecutils/: Makefile.am  Makefile.in  rim.c  rim.h
liblog/: Makefile.am  Makefile.in  log.c  log.h
libpdp12/: Makefile.am  Makefile.in  asr33.c  asr33.h  cpu.c  cpu.h  iob.c  iob.h  linc.c  linc.h  pdp8.c  pdp8.h  vr12.c  vr12.h
libpdp12utils/: Makefile.am  bin.c  bin.h  log.c  log.h  rim.c  rim.h
tools/: Makefile.am
tools/pal/: Makefile.am  asl.c  asl.h  pal.c  pal.h  pal.l  pal.y  pdp8.c  pdp8.h  pdp8.inc  symbols.c  symbols.h
tools/pal/test/: hello.pal
