AC_INIT([pdp12emu],[0.1])
AM_INIT_AUTOMAKE

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB

AC_CHECK_HEADERS([argp.h])

AC_ARG_ENABLE(readline,
		AC_HELP_STRING([--disable-readline], [disables the use of GNU Readline]))

if test x$enable_readline != xno; then
   VL_LIB_READLINE
fi

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile]
		[pdp12-emu.spec]
		[libpdp12/Makefile]
		[libdecutils/Makefile]
		[liblog/Makefile]
		[frontend/Makefile]
		[frontend/console/Makefile])
AC_OUTPUT
