#
# SPDX-FileCopyrightText: Copyright 2006-2007 Andreas Sandberg <andreas@sandberg.uk>
#
# SPDX-License-Identifier: BSD-3-Clause
#
noinst_LIBRARIES = libpdp12.a

libpdp12_a_SOURCES = 			\
	cpu.c		cpu.h		\
	iob.c		iob.h		\
	linc.c		linc.h		\
	pdp8.c		pdp8.h		\
	asr33.c		asr33.h		\
	vr12.c		vr12.h

libpdp12_a_CFLAGS = -I$(top_srcdir)
